--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .photo-uploader h3 {
@@ -58,7 +58,7 @@
     color: #fff;
     font-size: 2em;
     border: none;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     z-index: 1100;
     display: flex;
